Bug 194726 Major layout regressions in 1.3b 64-bit build patch by bernd_mozilla@gmx.de r=roc+moz sr=roc+moz a=roc+moz